# PawFoucs

./: README.md  create_icons.py  index.html  package-lock.json  package.json  pixel-icons-catalog.md  tailwind.config.js  vite.config.ts
docs/test-reports/: RECENT_CHANGES_TEST_REPORT.md  SLICE_1.4_UIREDESIGN_TEST_REPORT.md  SLICE_1.5_2.1_COMBINED_TEST_REPORT.md  SLICE_2.2_HEALTH_STATS_TEST_REPORT.md  SLICE_2.3_AMBIENT_BACKGROUND_TEST_REPORT.md  SLICE_3.2_TEST_REPORT.md  cat-sprite-strip-test-2026-05-08.md  mini-timer-analysis-2026-05-06.md  timer-edit-habit-dialog-test-2026-05-08.md
public/: mini-timer.html
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mini_timer.rs  tauri_plugin.rs  tray.rs
src-tauri/src/macos/: mod.rs
src/components/: AppIcon.vue  HabitPanel.vue  MemoPanel.vue  SettingsPanel.vue  StatsPanel.vue
src/components/Ambient/: AmbientBackground.vue
src/components/Pet/: PetNaming.vue  (+4 more)
src/composables/: useHealthReminder.ts  useNotification.ts  usePet.ts  usePetAnimation.ts  useSound.ts  useTimeOfDay.ts  useTimer.ts  useWindow.ts
src/data/: petDialogs.ts
src/stores/: habit.ts  health.ts  index.ts  memo.ts  pet.ts  pomodoro.ts  settings.ts  user.ts  window.ts
src/styles/: tokens.css  utilities.css
src/types/: achievement.ts  habit.ts  health.ts  index.ts  memo.ts  outfit.ts  pet.ts  pomodoro.ts  user.ts  weather.ts  window.ts
src/utils/: date.ts
tests/: bugfix-regression-tests.ts  integration-tests.ts  pet-sleep-tests.ts  test-suite.ts
(+106 files in other folders)
